--- a/ejercicio4/CMakeLists.txt
+++ b/ejercicio4/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(gtest_main STATIC tests/gtest-1.8.1/gtest_main.cc)
 file(GLOB SOURCE_FILES src/*.cpp src/*.h src/*.hpp)
 file(GLOB TESTS tests/*.cpp)
 
-add_executable(correrTests ${SOURCE_FILES} ${TESTS} choripanes.h choripanes.cpp tests/tests_partes.cpp)
+add_executable(correrTests ${SOURCE_FILES} ${TESTS} choripanes.h choripanes.cpp tests/tests_partes.cpp tests/tests_choripanesv2.cpp tests/tests_choripanesv3.cpp)
 
 # Necesitamos asociar los archivos del framework de testing
 target_link_libraries(correrTests gtest gtest_main)
